syntax = "proto3";

package app.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/app/v1;v1";

// 用户服务
service User {
  // 登录
  rpc Login(LoginReq) returns (LoginReply) {
    option (google.api.http) = {
      post: "/app/v1/user/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }

  // 检查token
  rpc CheckToken(CheckTokenReq) returns (CheckTokenReply) {}

  // 获取用户详情
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoReply) {
    option (google.api.http) = {get: "/app/v1/user/profile"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }

  // 更新用户信息
  rpc UpdateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoReply) {
    option (google.api.http) = {
      post: "/app/v1/user/profile/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }

  // 修改密码
  rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordReply) {
    option (google.api.http) = {
      post: "/app/v1/user/password/change"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }

  // 发送验证码
  rpc SendVerifyCode(SendVerifyCodeReq) returns (SendVerifyCodeReply) {
    option (google.api.http) = {
      post: "/app/v1/user/code/send"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {};
  }

  // 绑定手机号
  rpc BindPhone(BindPhoneReq) returns (BindPhoneReply) {
    option (google.api.http) = {
      post: "/app/v1/user/phone/bind"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }

  // 注销账号
  rpc DeleteAccount(DeleteAccountReq) returns (DeleteAccountReply) {
    option (google.api.http) = {
      post: "/app/v1/user/account/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}

// 请求-登录
message LoginReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "username",
        "password"
      ]
    }
  };

  string username = 1 [(buf.validate.field).string = {min_len: 1}]; // 账号(默认使用手机号)
  string password = 2 [(buf.validate.field).string = {min_len: 1}]; // 密码
}

// 响应-登录
message LoginReply {
  string token = 1; // token
  int64 expiredAt = 2; // 过期时间
  int64 refreshAt = 3; // 刷新时间
}

// 请求-检查token
message CheckTokenReq {
  string token = 1; // token
}

// 响应-检查token
message CheckTokenReply {
  string userId = 1; // 用户ID
  string wxGzhUserId = 2; // 公众号用户Id
  string wxGzhXcxId = 3; // 小程序用户Id
}

// 用户详情信息（基于数据库实际字段）
message UserInfo {
  string id = 1; // 用户ID
  string phone = 2; // 手机号（脱敏）
  string nickname = 3; // 昵称
  int32 gender = 4; // 性别：0-未知，1-男，2-女
  string avatar = 5; // 头像
  string profile = 6; // 简介
  string wxGzhUserId = 7; // 公众号用户Id
  string wxGzhXcxId = 8; // 小程序用户Id
  int32 status = 9; // 状态：1-正常
  string createdAt = 10; // 创建时间
  string updatedAt = 11; // 更新时间
}

// 请求-获取用户详情
message GetUserInfoReq {}

// 响应-获取用户详情
message GetUserInfoReply {
  UserInfo info = 1; // 用户详情
}

// 请求-更新用户信息
message UpdateUserInfoReq {
  string nickname = 1 [(buf.validate.field).string = {max_len: 50}]; // 昵称
  string avatar = 2 [(buf.validate.field).string = {max_len: 500}]; // 头像
  int32 gender = 3 [(buf.validate.field).int32 = {
    gte: 0
    lte: 2
  }]; // 性别：0-未知，1-男，2-女
  string profile = 4 [(buf.validate.field).string = {max_len: 500}]; // 简介
}

// 响应-更新用户信息
message UpdateUserInfoReply {}

// 请求-修改密码
message ChangePasswordReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "oldPassword",
        "newPassword",
        "confirmPassword"
      ]
    }
  };
  string oldPassword = 1 [(buf.validate.field).string = {
    min_len: 6
    max_len: 32
  }]; // 旧密码
  string newPassword = 2 [(buf.validate.field).string = {
    min_len: 6
    max_len: 32
  }]; // 新密码
  string confirmPassword = 3 [(buf.validate.field).string = {
    min_len: 6
    max_len: 32
  }]; // 确认新密码
}

// 响应-修改密码
message ChangePasswordReply {}

// 请求-发送验证码
message SendVerifyCodeReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["phone"]
    }
  };
  string phone = 1 [(buf.validate.field).string = {pattern: "^1[3-9]\\d{9}$"}]; // 手机号
}

// 响应-发送验证码
message SendVerifyCodeReply {}

// 请求-绑定手机号
message BindPhoneReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "phone",
        "code"
      ]
    }
  };
  string phone = 1 [(buf.validate.field).string = {pattern: "^1[3-9]\\d{9}$"}]; // 手机号
  string code = 2 [(buf.validate.field).string = {len: 6}]; // 验证码
}

// 响应-绑定手机号
message BindPhoneReply {}

// 请求-注销账号
message DeleteAccountReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["password"]
    }
  };
  string password = 1 [(buf.validate.field).string = {
    min_len: 6
    max_len: 32
  }]; // 密码
}

// 响应-注销账号
message DeleteAccountReply {}
